covers off add mongodb

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,5 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 rabbitmq.queueName=talch
 rabbitmq.exchangeName=talch
 rabbitmq.routingKey=talch
+
+spring.data.mongodb.database=chat
