--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,29 +1,32 @@
 server.port:8081
-# = DATA SOURCE
-# ===============================
-# Set here configurations for the database connection
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/chat
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
-# Keep the connection alive if idle for a long time (needed in production)
+
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
-# ===============================
-# = JPA / HIBERNATE
-# ===============================
-# Show or not log for each sql query
-#  /////////////////////////////////////spring.jpa.show-sql=true
-# Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
-# schema will be automatically created afresh for every start of application
+
 spring.jpa.hibernate.ddl-auto=create-drop
-# Allows Hibernate to generate SQL optimized for a particular DBMS
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 
+admin-prop.firstAdminPhone = +972547219582
+admin-prop.secondAdminPhone = +972546647991
+admin-prop.adminPass = 1234
+admin-prop.firstAdminName = Anatoly
+admin-prop.secondAdminName = Kobi
 
-rabbitmq.queueName=talch
-rabbitmq.exchangeName=talch
-rabbitmq.routingKey=talch
+rabbitmq.queueNameA = talchAQ
+rabbitmq.queueNameB = talchBQ
+rabbitmq.queueNameC = talchCQ
+rabbitmq.queueNameD = talchDQ
+rabbitmq.exchangeName = talch1
+rabbitmq.routingKeyA = talchARK
+rabbitmq.routingKeyB = talchBRK
+rabbitmq.routingKeyC = talchCRK
+rabbitmq.routingKeyD = talchDRK
 
 spring.data.mongodb.database=chat
